--- a/main.html
+++ b/main.html
@@ -333,7 +333,7 @@ text-align: center;
 </div>
 
   <a href="/pair" class="btn" id="btn1" target="_blank" onclick="window.open('/pair'); return false;">Pair Code</a>
-  <a href="/qr" class="btn" id="btn2" target="_blank" onclick="window.open('/qr'); return false;">Qr code</a>
+  <a href="/qrcode" class="btn" id="btn2" target="_blank" onclick="window.open('/qr'); return false;">Qr code</a>
   <a href="https://dashboard.heroku.com/" class="btn" id="btn4" target="_blank">Deploy</a>
   
 <br>
