--- a/main.html
+++ b/main.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>.:: SLG-MD ::.</title>
   <meta name="theme-color" content="#f0a500">
-  <meta name="theme-color" content="#f0a500">
-  <meta name="description" content="Pairing session for SLG-MD.">
-<meta name="author" content="SLG">
-<meta name="robots" content="all"> 
-<meta name="robots schedule" content="auto"> 
-<meta name="distribution" content="global"> 
-<meta name="googlebot" content="index,follow">
-<meta property="og:title" content=".:: SLG-MD ::."/>  
-<meta name="description" content=" [+] Pairing session for SLG-MD [+] "> 
-
-
+  <meta name="description" content="[+] Pairing session for SLG-MD [+]">
+  <meta name="author" content="SLG">
+  <meta name="robots" content="all">
+  <meta name="robots schedule" content="auto">
+  <meta name="distribution" content="global">
+  <meta name="googlebot" content="index,follow">
+  <meta property="og:title" content=".:: SLG-MD ::.">
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Poppins:wght@400;600;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Aladin&family=Grenze+Gotisch:wght@900&family=Jolly+Lodger&family=New+Rocker&display=swap');
+  </style>
 
+  <style>
     body {
       display: flex;
       flex-direction: column;
@@ -40,24 +38,23 @@
     header {
       text-align: center;
       margin-top: 20px;
-      margin-bottom: 50px
+      margin-bottom: 50px;
     }
 
     h1 {
-      /*font-family: 'Fira Code', sans-serif;*/
-      font-family: 'New Rocker',cursive;
+      font-family: 'New Rocker', cursive;
       font-size: 3.2em;
       color: #047601;
       margin: 0;
-      text-shadow: 
-                2px 2px 0 #000, 
-                -2px -2px 0 #000, 
-                -2px 2px 0 #000, 
-                2px -2px 0 #000,
-                2px 0 0 #000, 
-                -2px 0 0 #000, 
-                0 2px 0 #000, 
-                0 -2px 0 #000;
+      text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px -2px 0 #000,
+        2px 0 0 #000,
+        -2px 0 0 #000,
+        0 2px 0 #000,
+        0 -2px 0 #000;
     }
 
     h2 {
@@ -93,7 +90,7 @@
       text-decoration: none;
       display: flex;
       align-items: center;
-      justify-content: center;    
+      justify-content: center;
     }
 
     .btn::after, .btn::before {
@@ -116,16 +113,12 @@
       transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
     }
 
-    .btn:hover::before {
-      transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
-    }
-
+    .btn:hover::before,
     .btn:hover::after {
       transform: skew(45deg) translate(-50%, -50%);
     }
 
     .btn:hover {
-      /*color: var(--secondary-color);*/
       color: black;
       font-weight: 600;
     }
@@ -135,45 +128,17 @@
       transform: scale(0.98);
     }
 
+    .btn:nth-of-type(1) { animation: shrink 2.4s infinite 0s; }
+    .btn:nth-of-type(2) { animation: shrink 2.4s infinite 0.4s; }
+    .btn:nth-of-type(3) { animation: shrink 2.4s infinite 0.8s; }
+    .btn:nth-of-type(4) { animation: shrink 2.4s infinite 1.2s; }
+    .btn:nth-of-type(5) { animation: shrink 2.4s infinite 1.6s; }
+    .btn:nth-of-type(6) { animation: shrink 2.4s infinite 2s; }
 
-.btn:nth-of-type(1) {
-    animation: shrink 2.4s infinite 0s;
-}
-
-.btn:nth-of-type(2) {
-    animation: shrink 2.4s infinite 0.4s;
-}
-
-.btn:nth-of-type(3) {
-    animation: shrink 2.4s infinite 0.8s;
-}
-
-.btn:nth-of-type(4) {
-    animation: shrink 2.4s infinite 1.2s;
-}
-
-.btn:nth-of-type(5) {
-    animation: shrink 2.4s infinite 1.6s;
-}
-
-.btn:nth-of-type(6) {
-    animation: shrink 2.4s infinite 2s;
-}
-
-@keyframes shrink {
-    0% {
-        transform: scale(1);
+    @keyframes shrink {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(0.9); }
     }
-    50% {
-        transform: scale(0.9);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-
-
-
 
     footer {
       position: absolute;
@@ -184,132 +149,110 @@
       color: #f0f0f0;
     }
 
-.menu-btn {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  background-color: transparent; /* Transparent background */
-  border: none;
-  cursor: pointer;
-  z-index: 10;
-  transition: transform 0.3s;
-  color: #a9263e; /* Orange color for the icon */
-  font-size: 24px;
-  padding: 10px;
-}
+    .menu-btn {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      z-index: 10;
+      transition: transform 0.3s;
+      color: #a9263e;
+      font-size: 24px;
+      padding: 10px;
+    }
 
-.menu-btn:hover {
-  transform: scale(1.1);
-  color: #a9263e; /* Slightly darker orange on hover */
-}
+    .menu-btn:hover {
+      transform: scale(1.1);
+    }
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 250px;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(10px);
-  color: #f0f0f0;
-  transform: translateX(-100%);
-  transition: transform 0.3s;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 30px;
-}
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 250px;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(10px);
+      color: #f0f0f0;
+      transform: translateX(-100%);
+      transition: transform 0.3s;
+      z-index: 5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 30px;
+    }
 
-.sidebar.show {
-  transform: translateX(0);
-}
+    .sidebar.show {
+      transform: translateX(0);
+    }
 
-.sidebar.lock {
-  transform: translateX(0);
-}
+    .sidebar img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      border: 2px dotted #047601;
+    }
 
-.sidebar img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-  border: 2px dotted #047601;
-}
+    .sidebar .profile-name {
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.2em;
+      margin-bottom: 30px;
+      opacity: 0.9;
+      color: #d3d0c2;
+    }
 
-.sidebar .profile-name {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.2em;
-  margin-bottom: 30px;
-  opacity: 0.9;
-  color: #d3d0c2;
-}
+    .sidebar .bio {
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 0.8em;
+      color: #d3d0c2;
+      margin: 0 5px 30px;
+    }
 
-.sidebar .bio {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 0.8em;
-  color: #d3d0c2;
-  margin-top: 0px;
-  margin-bottom: 30px;
-  margin-left: 5px;
-  margin-right: 5px;
+    .sidebar .follow-btn {
+      width: 150px;
+      padding: 0.4em 1em;
+      border-radius: 6px;
+      border: 1px solid #a9263e;
+      text-transform: uppercase;
+      color: #d3d0c2;
+      font-family: 'Fira Code', monospace;
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 10px;
+      background: linear-gradient(-45deg, #2f5c4f, #5a806c, #c14a5e, #773849);
+      background-size: 400% 400%;
+      animation: gradient 10s ease infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0.8;
+    }
 
-}
+    .sidebar .follow-btn:hover {
+      color: black;
+    }
 
-.sidebar .follow-btn {
-  width: 150px;
-  padding: 0.4em 1em;
-  background-color: #000;
-  border-radius: 6px;
-  border: 1px solid #a9263e;
-  transition: 0.3s;
-  text-transform: uppercase;
-  color: #d3d0c2;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Fira Code', monospace;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-  opacity: 0.8;
-   background: linear-gradient(-45deg, #2f5c4f, #5a806c, #c14a5e, #773849);
-   background-size: 400% 400%;
-   animation: gradient 10s ease infinite;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-@keyframes gradient {
-   0% {
-       background-position: 0% 50%;
-   }
-   50% {
-       background-position: 100% 50%;
-   }
-   100% {
-       background-position: 0% 50%;
-   }
-}
-
-
-.sidebar .follow-btn:hover {
-  color: black;
-}
-
-#love {
- position: relative;
- margin-top: 95px;
-text-align: center;
- font-family: 'Courier New', Courier, monospace;
- font-size: 0.9em;
- color: #d3d0c2;
-}
+    #love {
+      position: relative;
+      margin-top: 95px;
+      text-align: center;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 0.9em;
+      color: #d3d0c2;
+    }
   </style>
 </head>
 <body>
-
   <header>
     <h1 id="titre">SLG-MD</h1>
     <h2>Multifunctional WhatsApp Bot <br>THE GOAT</h2>
@@ -317,53 +260,43 @@ text-align: center;
 
   <button class="menu-btn" onclick="toggleSidebar()">&#9776;</button>
 
-<div class="sidebar" id="sidebar">
-  <img src="https://files.catbox.moe/uih7xz.jpg" alt="Profile Picture" id="profile-pic">
-  <div class="profile-name"onclick="redirigerVersWhatsApp()">@S L² G</div>
-  <div class="bio">Ce bot est développé par la Team SLG-MD...<br>Thanks to ALL</div>
+  <div class="sidebar" id="sidebar">
+    <img src="https://files.catbox.moe/uih7xz.jpg" alt="SLG Profile Logo" id="profile-pic">
+    <div class="profile-name" onclick="redirigerVersWhatsApp()">@S L² G</div>
+    <div class="bio">Ce bot est développé par la Team SLG-MD...<br>Thanks to ALL</div>
+    <a href="https://app.koyeb.com/auth/signup" class="follow-btn" target="_blank">KOYEB</a>
+    <a href="https://github.com" class="follow-btn" target="_blank">GITHUB</a>
+    <a href="https://railway.app/login" class="follow-btn" target="_blank">RAILWAY</a>
+    <a href="https://railway.app" class="follow-btn" target="_blank">BOTS LIST</a>
+    <a href="https://wa.me/237693755398" class="follow-btn" target="_blank">Contact Me</a>
+    <div id="love">Made with hard work</div>
+  </div>
 
-  <a href="https://app.koyeb.com/auth/signup" class="follow-btn" target="_blank">KOYEB</a>
-  <a href="https://github.com" class="follow-btn" target="_blank">GITHUB</a>
-  <a href="https://railway.app/login" class="follow-btn" target="_blank">RAIWAY</a>
-  <a href="railway.app" class="follow-btn" target="_blank">BOTS LIST</a>
-  <a href="wa.me/237693755398" class="follow-btn" target="_blank"> Contact Me</a>
-
-  <a id="love">Made with hard work</>
-
-</div>
-
-  <a href="/pair" class="btn" id="btn1" target="_blank" onclick="window.open('/pair'); return false;">Pair Code</a>
-  <a href="/qrcode" class="btn" id="btn2" target="_blank" onclick="window.open('/qr'); return false;">Qr code</a>
+  <a href="/pair" class="btn" id="btn1" target="_blank">Pair Code</a>
+  <a href="/qr" class="btn" id="btn2" target="_blank">Qr code</a>
   <a href="https://dashboard.heroku.com/" class="btn" id="btn4" target="_blank">Deploy</a>
-  
-<br>
-<br>
 
-  <footer>
-    &copy; 2025 SLG-MD
-  </footer>
+  <footer>&copy; 2025 SLG-MD</footer>
+
   <script src="https://temp.staticsave.com/6687f9563a726.js" async></script>
-<script src="/script.js" async></script>
-<script>
-  document.getElementById('titre').addEventListener('click', function() {
-    location.reload(); // Refresh the page
-  });
-</script>
-<script>
-  function redirigerVersWhatsApp() {
-    window.location.href = "https://wa.me/+237693755398";
-  }
-</script>
-<script>
-  document.getElementById('profile-pic').addEventListener('click', function() {
-    location.reload(); // Refresh the page
-  });
-</script>
-<script>
-  function toggleSidebar() {
-    const sidebar = document.getElementById('sidebar');
-    sidebar.classList.toggle('show');
-  }
-</script> 
+  <script src="/script.js" async></script>
+  <script>
+    document.getElementById('titre').addEventListener('click', function () {
+      location.reload();
+    });
+
+    document.getElementById('profile-pic').addEventListener('click', function () {
+      location.reload();
+    });
+
+    function redirigerVersWhatsApp() {
+      window.location.href = "https://wa.me/237693755398";
+    }
+
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('show');
+    }
+  </script>
 </body>
 </html>
