--- a/qr.html
+++ b/qr.html
@@ -7,16 +7,20 @@
   <title>SLG QR-CODE</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color:#ff895559;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
+      overflow: hidden;
     }
 
     .container {
@@ -28,96 +32,102 @@
     }
 
     .box {
-      width: 250px;
-      height: 350px;
-      padding: 20px;
-      background-color: #000;
-      border-radius: 12px;
+      width: 280px;
+      height: 400px;
+      padding: 25px 20px;
+      background: linear-gradient(to bottom right, #1f1f1f, #2b2b2b);
+      border-radius: 16px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      box-shadow: 0 0 10px rgba(0, 123, 255, 0.6);
-    }
-
-    #qr-container img {
-      max-width: 100%;
+      box-shadow: 0 10px 30px rgba(0, 123, 255, 0.4);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(5px);
     }
 
     .text-animation {
       font-size: 24px;
       font-weight: bold;
-      color: #fff;
-      background: linear-gradient(45deg, #007bff, #0056b3);
-      background-clip: text;
+      background: linear-gradient(90deg, #00d2ff, #3a7bd5);
       -webkit-background-clip: text;
-      color: transparent;
-      letter-spacing: 1.5px;
-      text-shadow: 0 0 10px #007bff, 0 0 20px #0056b3, 0 0 30px #003f7f;
-      animation: glow 1.5s ease-in-out infinite alternate;
-      margin-bottom: 10px;
+      -webkit-text-fill-color: transparent;
+      letter-spacing: 2px;
+      text-align: center;
+      animation: glow 1.8s ease-in-out infinite alternate;
+      margin-bottom: 15px;
     }
 
     @keyframes glow {
       from {
-        text-shadow: 0 0 20px #007bff, 0 0 30px #0056b3, 0 0 40px #003f7f;
+        text-shadow: 0 0 10px #00d2ff, 0 0 20px #3a7bd5;
       }
       to {
-        text-shadow: 0 0 10px #0056b3, 0 0 20px #003f7f, 0 0 30px #001f5f;
+        text-shadow: 0 0 20px #3a7bd5, 0 0 30px #00d2ff;
       }
+    }
+
+    #qr-container img {
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
     }
 
     #progress-bar-container {
       width: 100%;
-      height: 15px;
-      border-radius: 6px;
-      background-color: #333;
-      margin-top: auto; /* Aligne la barre de progression en bas */
+      height: 14px;
+      border-radius: 8px;
+      background-color: #444;
+      margin-top: auto;
+      overflow: hidden;
+      box-shadow: inset 0 0 5px rgba(255,255,255,0.2);
     }
 
     #progress-bar {
       width: 0%;
       height: 100%;
-      background-color: #007bff;
-      border-radius: 6px;
+      background: linear-gradient(to right, #00c6ff, #0072ff);
+      border-radius: 8px;
       transition: width 0.4s ease;
     }
 
     #reload-button {
       display: none;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 15px;
       padding: 10px;
-      background-color: #007bff;
+      background: linear-gradient(to right, #007bff, #0056b3);
       color: #fff;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
-      transition: background-color 0.3s;
+      font-weight: bold;
+      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+      transition: background 0.3s;
     }
 
     #reload-button:hover {
-      background-color: #555;
+      background: linear-gradient(to right, #0056b3, #003f7f);
     }
 
     .particle {
       position: absolute;
-      background-color: rgba(0, 123, 255, 0.8);
-      width: 5px;
-      height: 5px;
+      background-color: rgba(0, 123, 255, 0.4);
+      width: 4px;
+      height: 4px;
       border-radius: 50%;
-      opacity: 0.5;
-      animation: particleMove 4s linear infinite;
+      opacity: 0.4;
+      animation: particleMove 6s linear infinite;
       z-index: 0;
     }
 
     .particle:nth-child(2n) {
-      animation-duration: 5s;
+      animation-duration: 7s;
     }
 
     .particle:nth-child(3n) {
-      animation-duration: 6s;
+      animation-duration: 5s;
     }
 
     @keyframes particleMove {
@@ -125,11 +135,11 @@
         transform: translateY(0) translateX(0) scale(1);
       }
       50% {
-        transform: translateY(-100px) translateX(100px) scale(1.5);
+        transform: translateY(-80px) translateX(60px) scale(1.3);
         opacity: 0.7;
       }
       100% {
-        transform: translateY(200px) translateX(-100px) scale(0.5);
+        transform: translateY(150px) translateX(-50px) scale(0.4);
         opacity: 0;
       }
     }
@@ -138,17 +148,17 @@
 <body>
   <div class="container">
     <div class="box">
-      <div class="text-animation">SLG-MD QR-CODE</div> <!-- Titre en haut du box -->
+      <div class="text-animation">SLG-MD QR-CODE</div>
       <div id="qr-container"></div>
       <div id="progress-bar-container">
         <div id="progress-bar"></div>
       </div>
-      <button id="reload-button">Recharger la page</button> <!-- Bouton à la place de la barre de progression après chargement -->
+      <button id="reload-button">Recharger la page</button>
     </div>
   </div>
 
   <script>
-    for (let i = 0; i < 100000; i++) {
+    for (let i = 0; i < 100; i++) {
       const particle = document.createElement('div');
       particle.classList.add('particle');
       particle.style.left = `${Math.random() * 100}vw`;
