--- a/main.html
+++ b/main.html
@@ -273,7 +273,7 @@
   </div>
 
   <a href="/pair" class="btn" id="btn1" target="_blank">Pair Code</a>
-  <a href="/qr" class="btn" id="btn2" target="_blank">Qr code</a>
+  <a href="/qrcode" class="btn" id="btn2" target="_blank">Qr code</a>
   <a href="https://dashboard.heroku.com/" class="btn" id="btn4" target="_blank">Deploy</a>
 
   <footer>&copy; 2025 SLG-MD</footer>
