--- a/qr.html
+++ b/qr.html
@@ -17,7 +17,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/uih7xz.jpg");
+      background-image: url("https://files.catbox.moe/thto6s.jpg");
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
       overflow: hidden;
