--- a/pair.html
+++ b/pair.html
@@ -27,7 +27,7 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-image: url("https://files.catbox.moe/uih7xz.jpg");
+      background-image: url("https://files.catbox.moe/9cwoce.jpg");
       color: var(--text-color);
       min-height: 100vh;
       display: flex;
